made navbar fixed on mobile view

--- a/static/css/custom-bootstrap.scss
+++ b/static/css/custom-bootstrap.scss
@@ -169,7 +169,7 @@ footer {
 	}
 	.homeTitle h2 {
 		font-size: 25px;
-	}
+    }    
 }
 
 .navbarLinks {
@@ -182,7 +182,15 @@ footer {
 	}
 	.homeTitle {
 		font-size: 12px;
-	}
+    }
+
+  .navbar{
+    position: fixed;
+    right: 0;
+    left: 0;   
+    border-radius: 0;
+    top: 0;    
+}
 }
 
 @media screen and (max-width: 640px) {
